--- a/gitTest/.settings/org.eclipse.wst.common.component
+++ b/gitTest/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="gittest">
+    <wb-module deploy-name="gitTest">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <property name="context-root" value="gittest"/>
-        <property name="java-output-path" value="/gittest/target/classes"/>
+        <property name="context-root" value="gitTest"/>
+        <property name="java-output-path" value="/gitTest/target/classes"/>
     </wb-module>
 </project-modules>
